# the-challenge

./: CMakeLists.txt  CMakePresets.json
c1-pong/: CMakeLists.txt  main.cpp
c2-learn-opengl/: CMakeLists.txt  main.cpp
starter-template/: CMakeLists.txt  main.cpp
